# IFT-3100-Team23

./: .gitignore  README.md
Infographico/: CMakeLists.txt  Infographico.sln  Infographico.vcxproj  Makefile  config.make  includelist.cmake
Infographico/src/: application.cpp  application.h  historic.cpp  historic.h  main.cpp  model2D.cpp  model2D.h  renderer.cpp  renderer.h
Infographico/src/Domain/: ofApp.cpp  ofApp.h
Infographico/src/UI/: renderer.cpp  renderer.h
Infographico/src/primitives/: circle.cpp  circle.h  line.cpp  line.h  primitive.cpp  primitive.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h  triangleRect.cpp  triangleRect.h
Infographico/src/raycast_classes/: RayCastCamera.cpp  RayCastCamera.h  RayCastImage.cpp  RayCastImage.h  RayCastPlane.cpp  RayCastPlane.h  RayCastRay.h  RayCastSphere.cpp  RayCastSphere.h  SurfaceType.h  Vector.cpp  Vector.h
